--- a/index.html
+++ b/index.html
@@ -20,20 +20,25 @@
 <div class="gallery">
 <a target="_self" href="norway.html">
 <div class="desc">Norway</div>
+<div class="img">
 <img src="norway12.jpg">
 <img src="norway1s.jpg">
+</div>
 </a>
 </div>
 <div class="gallery" class="tooltip">
 <a target="_self" href="newZealand.html">
 <div class="desc">New-Zealand</div>
+<div class="img">
 <img src="newZealand.jpg">
 <img src="newZealand1s.jpg">
+</div>
 </a>
 </div>
 <div class="gallery">
 <a target="_self" href="tibet.html">
 <div class="desc">Tibet</div>
+<div class="img">
 <img src="tibet.jpg">
 <img src="tibet12.jpg">
 </div>
