--- a/tibet.html
+++ b/tibet.html
@@ -25,7 +25,7 @@
 <iframe width="575" height="323" src="https://www.youtube.com/embed/WP5f38VPLf8" title="Most Beautiful Places on Earth - Tibet" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 <div class="back">
-<a href="index.html"><-BACK</a>
+<a href="index.html">Home</a>
 </div>
 </div>
 </a>
