--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         <a href="norway.html">Norway</a>
         <a href="newzealand.html">New-Zealand</a>
         <a href="tibet.html">Tibet</a>
+        <div class="nav-right">
+            <a href="https://kenson9999.github.io/travel/">Github</a>
+        </div>
+        
     </div>
     </div>
     <div>
