--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
 
         <div class="gallery">
-            <a target="_self" href="newzealand.html">
+            <a target="_self" href="newZealand.html">
                 <div class="desc">New-Zealand</div>
                 <div class="img">
                     <img src="newZealand.jpg">
