--- a/tibet.html
+++ b/tibet.html
@@ -9,7 +9,7 @@
 <div class="navbar">
 <a href="index.html">[Home]</a>
 <a href="norway.html">Norway</a>
-<a href="newzealand.html">New-Zealand</a>
+<a href="newZealand.html">New-Zealand</a>
 <a href="tibet.html">Tibet</a>
 </div>
 </div>
