--- a/tibet.html
+++ b/tibet.html
@@ -1,37 +1,46 @@
 <!DOCTYPE HTML>
 <html>
+
 <head>
-<meta charset="utf-8">
-<title>Tibet</title>
-<link rel="stylesheet" type="text/css" href="mytravel.css">
+    <meta charset="utf-8">
+    <title>Tibet</title>
+    <link rel="stylesheet" type="text/css" href="mytravel.css">
 </head>
+
 <body>
-<div class="navbar">
-<a href="index.html">[Home]</a>
-<a href="norway.html">Norway</a>
-<a href="newZealand.html">New-Zealand</a>
-<a href="tibet.html">Tibet</a>
-</div>
-</div>
-<div class="flex">
-<div class="gallery2">
-<div class="desc">
-<h1>Tibet</h1>
-</div>
-<div class="yt">
-<iframe width="575" height="323" src="https://www.youtube.com/embed/MggnLMFDWc8" title="5 Interesting places to visit in Tibet" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</div>
-<div class="yt">
-<iframe width="575" height="323" src="https://www.youtube.com/embed/WP5f38VPLf8" title="Most Beautiful Places on Earth - Tibet" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</div>
-<div class="back">
-<a href="index.html">Home</a>
-</div>
-</div>
-</a>
-</div>
-</div>
-</div>
-</div>
+    <div class="navbar">
+        <a href="index.html">[Home]</a>
+        <a href="norway.html">Norway</a>
+        <a href="newZealand.html">New-Zealand</a>
+        <a href="tibet.html">Tibet</a>
+    </div>
+    </div>
+    <div class="flex">
+        <div class="gallery2">
+            <div class="desc">
+                <h1>Tibet</h1>
+            </div>
+            <div class="yt">
+                <iframe width="575" height="323" src="https://www.youtube.com/embed/MggnLMFDWc8"
+                    title="5 Interesting places to visit in Tibet" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            </div>
+            <div class="yt">
+                <iframe width="575" height="323" src="https://www.youtube.com/embed/WP5f38VPLf8"
+                    title="Most Beautiful Places on Earth - Tibet" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            </div>
+            <div class="back">
+                <a href="index.html">Home</a>
+            </div>
+        </div>
+        </a>
+    </div>
+    </div>
+    </div>
+    </div>
 </body>
+
 </html>
