--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     </div>
     <div>
-        <h1>TRAVEL AFTER COVID19!</h1>
+        <h1>Travel after covid!</h1>
     </div>
     <div class="flex">
         <div class="gallery">
