--- a/newZealand.html
+++ b/newZealand.html
@@ -16,6 +16,7 @@
     </div>
     </div>
     <div class="flex">
+        <div class="gal-left"><a href="norway.html"><img src="iconleft.png" alt="lorway"></a></div>
         <div class="gallery2">
             <div class="desc">
                 <h1>New-Zealand</h1>
@@ -37,7 +38,7 @@
                 <a href="index.html">Home</a>
             </div>
         </div>
-        </a>
+        <div class="gal-left"><a href="tibet.html"><img src="iconright.png" alt="Tibet"></a></div>
     </div>
     </div>
     </div>
