--- a/norway.html
+++ b/norway.html
@@ -14,8 +14,9 @@
         <a href="newZealand.html">New-Zealand</a>
         <a href="tibet.html">Tibet</a>
     </div>
-    </div>
+    
     <div class="flex">
+        <div class="gal-left"><a href="newzealand.html"><img src="iconleft.png" alt="New-Zealand"></a></div>
         <div class="gallery2">
             <div class="desc">
                 <h1>Norway</h1>
@@ -32,16 +33,11 @@
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
             </div>
-
-           
             <div class="back">
                 <a href="index.html">Home</a>
             </div>
         </div>
-
-    </div>
-    </div>
-    </div>
+        <div class="gal-left"><a href="tibet.html"><img src="iconright.png" alt="Tibet"></a></div>
     </div>
 </body>
 
