update_left_right_link

--- a/norway.html
+++ b/norway.html
@@ -16,7 +16,7 @@
     </div>
     
     <div class="flex">
-        <div class="gal-left"><a href="newzealand.html"><img src="iconleft.png" alt="New-Zealand"></a></div>
+        <div class="gal-left"><a href="tibet.html"><img src="iconleft.png" alt="tibet"></a></div>
         <div class="gallery2">
             <div class="desc">
                 <h1>Norway</h1>
@@ -37,7 +37,7 @@
                 <a href="index.html">Home</a>
             </div>
         </div>
-        <div class="gal-left"><a href="tibet.html"><img src="iconright.png" alt="Tibet"></a></div>
+        <div class="gal-left"><a href="newzealand.html"><img src="iconright.png" alt="New-Zealand"></a></div>
     </div>
 </body>
 
