--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
     </div>
     </div>
     <div>
-        <h1>Travel after covid!</h1>
+        <h1>Travel after covid19!</h1>
     </div>
+
     <div class="flex">
+        
         <div class="gallery">
             <a target="_self" href="norway.html">
                 <div class="desc">Norway</div>
@@ -38,6 +40,7 @@
                 </div>
             </a>
         </div>
+
         <div class="gallery">
             <a target="_self" href="tibet.html">
                 <div class="desc">Tibet</div>
