--- a/newZealand.html
+++ b/newZealand.html
@@ -16,7 +16,7 @@
     </div>
     </div>
     <div class="flex">
-        <div class="gal-left"><a href="norway.html"><img src="iconleft.png" alt="lorway"></a></div>
+        <div class="gal-left"><a href="norway.html"><img src="iconleft.png" alt="norway"></a></div>
         <div class="gallery2">
             <div class="desc">
                 <h1>New-Zealand</h1>
