--- a/tibet.html
+++ b/tibet.html
@@ -16,7 +16,7 @@
     </div>
     </div>
     <div class="flex">
-        <div class="gal-left"><a href="norway.html"><img src="iconleft.png" alt="Norway"></a></div>
+        <div class="gal-left"><a href="newzealand.html"><img src="iconleft.png" alt="New-Zealand"></a></div>
         <div class="gallery2">
             <div class="desc">
                 <h1>Tibet</h1>
@@ -37,7 +37,7 @@
                 <a href="index.html">Home</a>
             </div>
         </div>
-        <div class="gal-left"><a href="newzealand.html"><img src="iconright.png" alt="New-Zealand"></a></div>
+        <div class="gal-left"><a href="norway.html"><img src="iconright.png" alt="Norway"></a></div>
     </div>
     </div>
     </div>
