--- a/norway.html
+++ b/norway.html
@@ -37,7 +37,7 @@
                 <a href="index.html">Home</a>
             </div>
         </div>
-        <div class="gal-left"><a href="newzealand.html"><img src="iconright.png" alt="New-Zealand"></a></div>
+        <div class="gal-left"><a href="newZealand.html"><img src="iconright.png" alt="New-Zealand"></a></div>
     </div>
 </body>
 
