--- a/tibet.html
+++ b/tibet.html
@@ -16,7 +16,7 @@
     </div>
     </div>
     <div class="flex">
-        <div class="gal-left"><a href="newzealand.html"><img src="iconleft.png" alt="New-Zealand"></a></div>
+        <div class="gal-left"><a href="newZealand.html"><img src="iconleft.png" alt="New-Zealand"></a></div>
         <div class="gallery2">
             <div class="desc">
                 <h1>Tibet</h1>
