--- a/newZealand.html
+++ b/newZealand.html
@@ -22,16 +22,20 @@
                 <h1>New-Zealand</h1>
             </div>
             <div class="yt">
-                <iframe width="575" height="323" src="https://www.youtube.com/embed/RgKJPSkS4cs"
-                    title="Amazing Places to visit in New Zealand - Travel Video" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
+                <iframe width="575" height="323" src="https://www.youtube.com/embed/LJoI7_lEqW4"
+                title="Top 10 Best Places To Live In New Zealand (NEW) - Heaven On Earth" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
             </div>
             <div class="yt">
-                <iframe width="575" height="323" src="https://www.youtube.com/embed/LJoI7_lEqW4"
-                    title="Top 10 Best Places To Live In New Zealand (NEW) - Heaven On Earth" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
+                <p id="borderimg2" class="text3">
+                    <img id="flagimg" src="nz-flag.gif" alt="New-Zealand_flag">
+                    New Zealand is an island country in the southwestern Pacific Ocean. It consists of two main landmasses—the North Island (Te Ika-a-Māui) and the South Island (Te Waipounamu)—and over 700 smaller islands. It is the sixth-largest island country by area, covering 268,021 square kilometres (103,500 sq mi). New Zealand is about 2,000 kilometres (1,200 mi) east of Australia across the Tasman Sea and 1,000 kilometres (600 mi) south of the islands of New Caledonia, Fiji, and Tonga. The country's varied topography and sharp mountain peaks, including the Southern Alps, owe much to tectonic uplift and volcanic eruptions. New Zealand's capital city is Wellington, and its most populous city is Auckland.
+                </p>
+            </div>
+
+            <div class="yt">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4598494.6890386455!2d170.78510467363552!3d-41.753063770081084!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6d2c200e17779687%3A0xb1d618e2756a4733!2z57SQ6KW_6Jit!5e0!3m2!1szh-TW!2shk!4v1662620000170!5m2!1szh-TW!2shk" width="575" height="323" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
             <div class="back">
