--- a/norway.html
+++ b/norway.html
@@ -22,16 +22,21 @@
                 <h1>Norway</h1>
             </div>
             <div class="yt">
-                <iframe width="575" height="323" src="https://www.youtube.com/embed/uXyy7lgDj9k"
-                    title="10 Best Places to Visit in Norway - Travel Video" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
-            </div>
-            <div class="yt">
                 <iframe width="575" height="323" src="https://www.youtube.com/embed/aVHTOcKo9-4"
-                    title="🇳🇴Chasing Lights in Tromsø, Norway" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
+                title="🇳🇴Chasing Lights in Tromsø, Norway" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+            </div>
+
+            <div class="yt">
+                <p id="borderimg2" class="text3">
+                    <img id="flagimg" src="no-flag.webp" alt="Norway_flag">
+                    Norway, officially the Kingdom of Norway, is a Nordic country in Northern Europe, the mainland territory of which comprises the western and northernmost portion of the Scandinavian Peninsula. The remote Arctic island of Jan Mayen and the archipelago of Svalbard also form part of Norway. Bouvet Island, located in the Subantarctic, is a dependency of Norway; it also lays claims to the Antarctic territories of Peter I Island and Queen Maud Land. The capital and largest city in Norway is Oslo.
+                </p>
+            </div>
+
+            <div class="yt">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11879102.133840434!2d18.461689830953205!3d63.085885921549014!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x461268458f4de5bf%3A0xa1b03b9db864d02b!2z5oyq5aiB!5e0!3m2!1szh-TW!2shk!4v1662619565101!5m2!1szh-TW!2shk" width="575" height="323" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div class="back">
                 <a href="index.html">Home</a>
