--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="navbar">
         <a href="index.html">[Home]</a>
         <a href="norway.html">Norway</a>
-        <a href="newzealand.html">New-Zealand</a>
+        <a href="newzealand.html">New Zealand</a>
         <a href="tibet.html">Tibet</a>
     </div>
     </div>
@@ -33,7 +33,7 @@
 
         <div class="gallery">
             <a target="_self" href="newZealand.html">
-                <div class="desc">New-Zealand</div>
+                <div class="desc">New Zealand</div>
                 <div class="img">
                     <img src="newZealand.jpg">
                     <img src="newZealand1s.jpg">
