--- a/newZealand.html
+++ b/newZealand.html
@@ -19,7 +19,7 @@
         <div class="gal-left"><a href="norway.html"><img src="iconleft.png" alt="norway"></a></div>
         <div class="gallery2">
             <div class="desc">
-                <h1>New-Zealand</h1>
+                <h1>New Zealand</h1>
             </div>
             <div class="yt">
                 <iframe width="575" height="323" src="https://www.youtube.com/embed/LJoI7_lEqW4"
@@ -30,7 +30,7 @@
             <div class="yt">
                 <p id="borderimg2" class="text3">
                     <img id="flagimg" src="nz-flag.gif" alt="New-Zealand_flag">
-                    New Zealand is an island country in the southwestern Pacific Ocean. It consists of two main landmasses—the North Island (Te Ika-a-Māui) and the South Island (Te Waipounamu)—and over 700 smaller islands. It is the sixth-largest island country by area, covering 268,021 square kilometres (103,500 sq mi). New Zealand is about 2,000 kilometres (1,200 mi) east of Australia across the Tasman Sea and 1,000 kilometres (600 mi) south of the islands of New Caledonia, Fiji, and Tonga. The country's varied topography and sharp mountain peaks, including the Southern Alps, owe much to tectonic uplift and volcanic eruptions. New Zealand's capital city is Wellington, and its most populous city is Auckland.
+                    <span class="spanne">New Zealand</span> is an island country in the southwestern Pacific Ocean. It consists of two main landmasses—the North Island and the South Island (Te Waipounamu)—and over 700 smaller islands. It is the sixth-largest island country by area, covering 268,021 square kilometres (103,500 sq mi). New Zealand is about 2,000 kilometres (1,200 mi) east of Australia across the Tasman Sea and 1,000 kilometres (600 mi) south of the islands of New Caledonia, Fiji, and Tonga. The country's varied topography and sharp mountain peaks, including the Southern Alps, owe much to tectonic uplift and volcanic eruptions. New Zealand's capital city is Wellington, and its most populous city is Auckland.
                 </p>
             </div>
 
