--- a/tibet.html
+++ b/tibet.html
@@ -14,7 +14,6 @@
         <a href="newZealand.html">New-Zealand</a>
         <a href="tibet.html">Tibet</a>
     </div>
-    </div>
     <div class="flex">
         <div class="gal-left"><a href="newZealand.html"><img src="iconleft.png" alt="New-Zealand"></a></div>
         <div class="gallery2">
@@ -29,21 +28,26 @@
             </div>
             <div class="yt">
                 <p id="borderimg2" class="text3">
-                <img id="flagimg" src="Flag_of_Tibet.svg.png" alt="Tibet_flag">
-                Tibet is a region in East Asia, covering much of the Tibetan Plateau and spanning about 2,500,000 km2 (970,000 sq mi). It is the traditional homeland of the Tibetan people as well as some other ethnic groups such as Monpa, Tamang, Qiang, Sherpa and Lhoba peoples and is now also home to considerable numbers of Han Chinese and Hui people settlers. Tibet is the highest region on Earth, with an average elevation of 4,380 m (14,000 ft).Located in the Himalayas, the highest elevation in Tibet is Mount Everest, Earth's highest mountain, rising 8,848.86 m (29,032 ft) above sea level.
+                    <img id="flagimg" src="Flag_of_Tibet.svg.png" alt="Tibet_flag">
+                    <span class="spanti">Tibet</span> is a region in East Asia, covering much of the Tibetan Plateau and spanning about 2,500,000
+                    km2 (970,000 sq mi). It is the traditional homeland of the Tibetan people as well as some other
+                    ethnic groups such as Monpa, Tamang, Qiang, Sherpa and Lhoba peoples and is now also home to
+                    considerable numbers of Han Chinese and Hui people settlers. Tibet is the highest region on Earth,
+                    with an average elevation of 4,380 m (14,000 ft).Located in the Himalayas, the highest elevation in
+                    Tibet is Mount Everest, Earth's highest mountain, rising 8,848.86 m (29,032 ft) above sea level.
                 </p>
             </div>
             <div class="yt">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3084184.4591580373!2d90.18641807469443!3d30.553115159557596!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3761317e9c4a2cc1%3A0x1fc12c628413da99!2z5Lit5ZyL6KW_6JeP6Ieq5rK75Y2A!5e0!3m2!1szh-TW!2shk!4v1662620109298!5m2!1szh-TW!2shk" width="575" height="323" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3084184.4591580373!2d90.18641807469443!3d30.553115159557596!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3761317e9c4a2cc1%3A0x1fc12c628413da99!2z5Lit5ZyL6KW_6JeP6Ieq5rK75Y2A!5e0!3m2!1szh-TW!2shk!4v1662620109298!5m2!1szh-TW!2shk"
+                    width="575" height="323" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div class="back">
                 <a href="index.html">Home</a>
             </div>
         </div>
         <div class="gal-left"><a href="norway.html"><img src="iconright.png" alt="Norway"></a></div>
-    </div>
-    </div>
-    </div>
     </div>
 </body>
 
