--- a/newZealand.html
+++ b/newZealand.html
@@ -35,7 +35,7 @@
             </div>
 
             <div class="yt">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4598494.6890386455!2d170.78510467363552!3d-41.753063770081084!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6d2c200e17779687%3A0xb1d618e2756a4733!2z57SQ6KW_6Jit!5e0!3m2!1szh-TW!2shk!4v1662620000170!5m2!1szh-TW!2shk" width="575" height="323" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6309077.48894469!2d170.62691760986326!3d-41.322677681557806!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6d2c200e17779687%3A0xb1d618e2756a4733!2sNew%20Zealand!5e0!3m2!1sen!2shk!4v1662624605439!5m2!1sen!2shk" width="575" height="323" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
             <div class="back">
