--- a/norway.html
+++ b/norway.html
@@ -36,7 +36,7 @@
             </div>
 
             <div class="yt">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11879102.133840434!2d18.461689830953205!3d63.085885921549014!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x461268458f4de5bf%3A0xa1b03b9db864d02b!2z5oyq5aiB!5e0!3m2!1szh-TW!2shk!4v1662619565101!5m2!1szh-TW!2shk" width="575" height="323" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11130994.656925773!2d10.00364725639316!3d61.74818477045962!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x461268458f4de5bf%3A0xa1b03b9db864d02b!2sNorway!5e0!3m2!1sen!2shk!4v1662624398788!5m2!1sen!2shk" width="575" height="323" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div class="back">
                 <a href="index.html">Home</a>
