--- a/tibet.html
+++ b/tibet.html
@@ -38,10 +38,7 @@
                 </p>
             </div>
             <div class="yt">
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3084184.4591580373!2d90.18641807469443!3d30.553115159557596!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3761317e9c4a2cc1%3A0x1fc12c628413da99!2z5Lit5ZyL6KW_6JeP6Ieq5rK75Y2A!5e0!3m2!1szh-TW!2shk!4v1662620109298!5m2!1szh-TW!2shk"
-                    width="575" height="323" style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3899688.032868939!2d88.89637742680242!3d30.655872283439827!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3761317e9c4a2cc1%3A0x1fc12c628413da99!2sTibet%2C%20China!5e0!3m2!1sen!2shk!4v1662624557320!5m2!1sen!2shk" width="575" height="323" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div class="back">
                 <a href="index.html">Home</a>
