--- a/newZealand.html
+++ b/newZealand.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="utf-8">
-    <title>New-Zealand</title>
+    <title>Kenson - New Zealand</title>
     <link rel="stylesheet" type="text/css" href="mytravel.css">
 </head>
 
 <body>
     <div class="navbar">
-        <a href="index.html">[Home]</a>
+        <a href="10_travel_ChanTakKeungKenson.html">[Home]</a>
         <a href="norway.html">Norway</a>
         <a href="newZealand.html">New-Zealand</a>
         <a href="tibet.html">Tibet</a>
@@ -39,7 +39,7 @@
             </div>
 
             <div class="back">
-                <a href="index.html">Home</a>
+                <a href="10_travel_ChanTakKeungKenson.html">Home</a>
             </div>
         </div>
         <div class="gal-left"><a href="tibet.html"><img src="iconright.png" alt="Tibet"></a></div>
