--- a/norway.html
+++ b/norway.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Kenson - cssbackcolorimage</title>
+    <title>Kenson - Norway</title>
     <link rel="stylesheet" type="text/css" href="mytravel.css">
 </head>
 
 <body>
     <div class="navbar">
-        <a href="index.html">[Home]</a>
+        <a href="10_travel_ChanTakKeungKenson.html">[Home]</a>
         <a href="norway.html">Norway</a>
         <a href="newZealand.html">New-Zealand</a>
         <a href="tibet.html">Tibet</a>
@@ -39,7 +39,7 @@
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11130994.656925773!2d10.00364725639316!3d61.74818477045962!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x461268458f4de5bf%3A0xa1b03b9db864d02b!2sNorway!5e0!3m2!1sen!2shk!4v1662624398788!5m2!1sen!2shk" width="575" height="323" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div class="back">
-                <a href="index.html">Home</a>
+                <a href="10_travel_ChanTakKeungKenson.html">Home</a>
             </div>
         </div>
         <div class="gal-left"><a href="newZealand.html"><img src="iconright.png" alt="New-Zealand"></a></div>
