--- a/tibet.html
+++ b/tibet.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Tibet</title>
+    <title>Kenson - Tibet</title>
     <link rel="stylesheet" type="text/css" href="mytravel.css">
 </head>
 
 <body>
     <div class="navbar">
-        <a href="index.html">[Home]</a>
+        <a href="10_travel_ChanTakKeungKenson.html">[Home]</a>
         <a href="norway.html">Norway</a>
         <a href="newZealand.html">New-Zealand</a>
         <a href="tibet.html">Tibet</a>
@@ -41,7 +41,7 @@
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3899688.032868939!2d88.89637742680242!3d30.655872283439827!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3761317e9c4a2cc1%3A0x1fc12c628413da99!2sTibet%2C%20China!5e0!3m2!1sen!2shk!4v1662624557320!5m2!1sen!2shk" width="575" height="323" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div class="back">
-                <a href="index.html">Home</a>
+                <a href="10_travel_ChanTakKeungKenson.html">Home</a>
             </div>
         </div>
         <div class="gal-left"><a href="norway.html"><img src="iconright.png" alt="Norway"></a></div>
