--- a/newZealand.html
+++ b/newZealand.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class="navbar">
-        <a href="10_travel_ChanTakKeungKenson.html">[Home]</a>
+        <a href="index.html">[Home]</a>
         <a href="norway.html">Norway</a>
         <a href="newZealand.html">New-Zealand</a>
         <a href="tibet.html">Tibet</a>
