--- a/norway.html
+++ b/norway.html
@@ -19,7 +19,7 @@
         <div class="gal-left"><a href="tibet.html"><img src="iconleft.png" alt="tibet"></a></div>
         <div class="gallery2">
             <div class="desc">
-                <h1>Norway</h1>
+                <h1>Vic:Norway</h1>
             </div>
             <div class="yt">
                 <iframe width="575" height="323" src="https://www.youtube.com/embed/aVHTOcKo9-4"
