--- a/newZealand.html
+++ b/newZealand.html
@@ -39,7 +39,7 @@
             </div>
 
             <div class="back">
-                <a href="10_travel_ChanTakKeungKenson.html">Home</a>
+                <a href="updateHomeLink.html">Home</a>
             </div>
         </div>
         <div class="gal-left"><a href="tibet.html"><img src="iconright.png" alt="Tibet"></a></div>
